Work on Common, HPGNet, MekWarsAdmin